--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -18,10 +18,6 @@ textarea {
   resize: none;
 }
 
-textarea:focus {
-  outline: solid 3px #76B041;
-}
-
 button {
   color: #323232;
   background-color: #fafafa;
@@ -63,4 +59,16 @@ footer {
   font-weight: bold;
   text-decoration: underline;
   cursor: pointer;
+}
+
+.gratitude-box {
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+  padding: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: #fafafa solid 5px;
+  margin-bottom: 4rem;
 }
